[package]
name = "hydrogen_src"
version = "0.1.0"
edition = "2024"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
i24 = "1"
rayon = { version = "1", optional = true }
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wavers = "1"
zip = "8"
